# obsidian-watch

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
src/: config.rs  executor.rs  main.rs
