[package]
name = "notify-obsidian"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
